--- a/src/server/view/index.ejs
+++ b/src/server/view/index.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <link rel="stylesheet" href="https://npmcdn.com/bootstrap@4.0.0-alpha.3/dist/css/bootstrap.min.css" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="/static/app.styles.css">
   <meta charset="UTF-8">
   <title>React Starter</title>
 </head>
